2006-01-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/manager/admin.py:
	  ixnay on the keeping of local patches
	  this makes components startable from the admin again

2006-01-23  Thomas Vander Stichele  <thomas at apestaart dot org>

	* common/gen-locale-xml.py:
	* doc/random/header.py:
	* flumotion/__init__.py:
	* flumotion/admin/__init__.py:
	* flumotion/admin/admin.py:
	* flumotion/admin/command/__init__.py:
	* flumotion/admin/command/commands.py:
	* flumotion/admin/command/main.py:
	* flumotion/admin/command/utils.py:
	* flumotion/admin/connections.py:
	* flumotion/admin/gtk/__init__.py:
	* flumotion/admin/gtk/client.py:
	* flumotion/admin/gtk/connections.py:
	* flumotion/admin/gtk/dialogs.py:
	* flumotion/admin/gtk/greeter.py:
	* flumotion/admin/gtk/main.py:
	* flumotion/admin/gtk/parts.py:
	* flumotion/admin/gtk/spyglass.py:
	* flumotion/admin/gtk/videotest.py:
	* flumotion/admin/gtk/wizard.py:
	* flumotion/admin/text/admin_text.py:
	* flumotion/admin/text/connection.py:
	* flumotion/admin/text/greeter.py:
	* flumotion/admin/text/main.py:
	* flumotion/admin/text/misc_curses.py:
	* flumotion/admin/text/view.py:
	* flumotion/common/__init__.py:
	* flumotion/common/boot.py.in:
	* flumotion/common/bundle.py:
	* flumotion/common/bundleclient.py:
	* flumotion/common/common.py:
	* flumotion/common/compat.py:
	* flumotion/common/componentui.py:
	* flumotion/common/config.py:
	* flumotion/common/dag.py:
	* flumotion/common/debug.py:
	* flumotion/common/enum.py:
	* flumotion/common/errors.py:
	* flumotion/common/gstreamer.py:
	* flumotion/common/interfaces.py:
	* flumotion/common/keycards.py:
	* flumotion/common/log.py:
	* flumotion/common/medium.py:
	* flumotion/common/package.py:
	* flumotion/common/planet.py:
	* flumotion/common/pygobject.py:
	* flumotion/common/registry.py:
	* flumotion/common/reload.py:
	* flumotion/common/setup.py:
	* flumotion/common/watched.py:
	* flumotion/common/worker.py:
	* flumotion/component/__init__.py: